kubernetes/apps/base/business-system/roundcube/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: roundcube
  namespace: business-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 'external.${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - 'webmail.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2/
      backendRefs:
        - name: oauth2-proxy
          namespace: network-system
          port: 80
          weight: 100
    - backendRefs:
        - name: roundcube
          port: 80
          weight: 100
